[gd_scene load_steps=13 format=3 uid="uid://brcjsn57c8n5p"]

[ext_resource type="Script" path="res://scripts/projectile.gd" id="1_6o5w2"]
[ext_resource type="Texture2D" uid="uid://dm5gpdlvevfnl" path="res://assets/art/vfx/flame/flame_0.png" id="1_7t0g0"]
[ext_resource type="PackedScene" uid="uid://nmprnxbf13ho" path="res://scenes/explosion.tscn" id="2_wkw1k"]
[ext_resource type="Texture2D" uid="uid://bia2pss5e05s1" path="res://assets/art/vfx/flame/flame_1.png" id="3_tjnaq"]
[ext_resource type="Texture2D" uid="uid://cbb01m2duplje" path="res://assets/art/vfx/flame/flame_2.png" id="4_co7x6"]
[ext_resource type="Texture2D" uid="uid://dhik1kubrdg1i" path="res://assets/art/vfx/flame/flame_3.png" id="5_tqeei"]
[ext_resource type="Texture2D" uid="uid://b020abm2yiqjt" path="res://assets/art/vfx/flame/flame_4.png" id="6_kqmq2"]
[ext_resource type="Texture2D" uid="uid://dack3xff717lb" path="res://assets/art/vfx/flame/flame_5.png" id="7_vr36w"]
[ext_resource type="Texture2D" uid="uid://bafcjrkv6jus" path="res://assets/art/vfx/flame/flame_6.png" id="8_qkoul"]
[ext_resource type="Texture2D" uid="uid://xpjcovltfxha" path="res://assets/art/vfx/flame/flame_7.png" id="9_1khwg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j50l0"]
resource_local_to_scene = true
radius = 4.0

[sub_resource type="SpriteFrames" id="SpriteFrames_uw5ym"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_7t0g0")
}, {
"duration": 1.0,
"texture": ExtResource("3_tjnaq")
}, {
"duration": 1.0,
"texture": ExtResource("4_co7x6")
}, {
"duration": 1.0,
"texture": ExtResource("5_tqeei")
}, {
"duration": 1.0,
"texture": ExtResource("6_kqmq2")
}, {
"duration": 1.0,
"texture": ExtResource("7_vr36w")
}, {
"duration": 1.0,
"texture": ExtResource("8_qkoul")
}, {
"duration": 1.0,
"texture": ExtResource("9_1khwg")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[node name="Projectile" type="Node2D"]
rotation = -1.5708
script = ExtResource("1_6o5w2")
explosion = ExtResource("2_wkw1k")

[node name="SelfDestructTimer" type="Timer" parent="."]

[node name="ImpactZone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 23

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImpactZone"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_j50l0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uw5ym")
autoplay = "default"
frame_progress = 0.120862

[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
[connection signal="body_entered" from="ImpactZone" to="." method="_on_impact_zone_body_entered"]
